--- a/packages/dmn-json-schema-generator/package.json
+++ b/packages/dmn-json-schema-generator/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/kiegroup/kogito-tooling.git"
   },
   "scripts": {
-    "build:dev": "mvn clean package -B -DskipTests -nsu && echo ",
-    "build:prod": "mvn clean package -B -nsu && echo "
+    "build:dev": "mvn clean package -B -DskipTests -nsu",
+    "build:prod": "mvn clean package -B -nsu"
   }
 }
