--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -21,6 +21,7 @@
     "@kogito-tooling/notifications": "0.10.0",
     "ajv": "^6.12.6",
     "ajv-errors": "^1.0.1",
+    "deep-object-diff": "^1.1.0",
     "uniforms": "^3.5.1",
     "uniforms-bridge-json-schema": "^3.5.1",
     "uniforms-patternfly": "^4.6.1"
